# Image-Classification-ML2

./: .gitignore  README.md  main.py  pyproject.toml
kagglestuff/: comp_winner.md
src/: augmentations.py  dataset.py
